# fastapi-testes

./: main.py  pyproject.toml
backend/: main.py
